--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "spawn_runner",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Spawns child processes with ease.",
-  "main": "runner.js",
+  "main": "spawn_runner.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
